Updated structure so that we have a library module and an app module

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,3 +25,4 @@ androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx"
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-library = { id = "com.android.library", version.ref = "agp" }
