--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,15 +16,15 @@ jobs:
       - uses: actions/checkout@v4
       - run: echo "The ${{ github.repository }} repository has been cloned."
       - run: echo "Setting up JDK"
-      - name: set up JDK 11
+      - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
-      - run: echo "Setting up cmake"
-      - run: sudo apt install build-essential cmake
-      - run: echo "The workflow is now ready to test your code."
+#      - run: echo "Setting up cmake"
+#      - run: sudo apt install build-essential cmake
+#      - run: echo "The workflow is now ready to test your code."
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - run: echo "Building Debug APK."
