Updated to use a different publication plugin

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,4 +27,5 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 git-version = { id = "me.qoomon.git-versioning", version = "6.4.2" }
-sonatype-maven-central = { id = "io.deepmedia.tools.deployer", version = "0.13.0" }
+sonatype-maven-central = { id = "com.vanniktech.maven.publish", version = "0.28.0" }
+gradleup-nmcp = { id = "com.gradleup.nmcp", version = "0.0.7"}
