--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -22,9 +22,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
-      - run: echo "Setting up cmake"
-      - run: sudo apt install build-essential cmake
-      - run: echo "The workflow is now ready to test your code."
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - run: echo "Building Debug APK."
@@ -32,4 +29,4 @@ jobs:
         run: ./gradlew build
       - run: echo "Build status report=${{ job.status }}."
       - name: Deploy to Sonatype / Maven Central
-        run: ./gradlew -PcentralPortalToken=${{ secrets.CENTRAL_PORTAL_TOKEN }} -PcentralPortalPassword=${{ secrets.CENTRAL_PORTAL_PASSWORD }} -PsigningKeyId=${{ secrets.SIGNING_KEY_ID }} -PsigningKeyPassword=${{ secrets.SIGNING_KEY_PASSWORD }} -PsigningKey=${{ secrets.SIGNING_KEY }} deployAll
+        run: ./gradlew -PcentralPortalToken=${{ secrets.CENTRAL_PORTAL_TOKEN }} -PcentralPortalPassword=${{ secrets.CENTRAL_PORTAL_PASSWORD }} -PsigningKeyId=${{ secrets.SIGNING_KEY_ID }} -PsigningKeyPassword=${{ secrets.SIGNING_KEY_PASSWORD }} -PsigningKey=${{ secrets.SIGNING_KEY }} publishAllPublicationsToCentralPortal
