Trying to fix signing

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -24,4 +24,4 @@ jobs:
         run: ./gradlew build
       - run: echo "Build status report=${{ job.status }}."
       - name: Deploy to Sonatype / Maven Central
-        run: ./gradlew -PcentralPortalToken='${{ secrets.CENTRAL_PORTAL_TOKEN }}' -PcentralPortalPassword='${{ secrets.CENTRAL_PORTAL_PASSWORD }}' -PsigningKeyId='${{ secrets.SIGNING_KEY_ID }}' -PsigningKeyPassword='${{ secrets.SIGNING_KEY_PASSWORD }}' -PsigningKey='${{ secrets.SIGNING_KEY }}' publishAllPublicationsToCentralPortal
+        run: ./gradlew -PcentralPortalToken='${{ secrets.CENTRAL_PORTAL_TOKEN }}' -PcentralPortalPassword='${{ secrets.CENTRAL_PORTAL_PASSWORD }}' -Psigning.inMemoryKeyId='${{ secrets.SIGNING_KEY_ID }}' -Psigning.inMemoryKeyPassword='${{ secrets.SIGNING_KEY_PASSWORD }}' -Psigning.inMemoryKey='${{ secrets.SIGNING_KEY_IN_MEMORY }}' publishAllPublicationsToCentralPortal
