fix broken pings

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,11 +33,11 @@ de-manodermaus-android-junit5 = { module = "de.mannodermaus.junit5:android-test-
 de-manodermaus-android-junit5-runner = { module = "de.mannodermaus.junit5:android-test-runner", version.ref = "mannodermaus_junit5" }
 junit = { module = "junit:junit", version.ref = "junit" }
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "jupiter" }
-junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "jupiter" }
 logback-android = { module = "com.github.tony19:logback-android", version.ref = "logback-android" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4jApi" }
+packetdumper = { module = "com.jasonernst.packetdumper:packetdumper", version = "0.0.2" }
 
 [bundles]
 android-test = ["junit-jupiter-api", "androidx_test_runner", "androidx_test_monitor", "androidx_test_uiautomator", "de-manodermaus-android-junit5"]
