--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,15 +7,15 @@ appcompat = "1.7.0"
 constraintlayout = "2.1.4"
 coreKtx = "1.13.1"
 espressoCore = "3.6.1"
-junit = "4.13.2"
 junitVersion = "1.2.1"
 jupiter = "5.10.3"
 kotlin = "2.0.10"
 logback-android = "3.0.0"
+logback-classic = "1.5.6"
 material = "1.12.0"
 navigationFragmentKtx = "2.7.7"
 navigationUiKtx = "2.7.7"
-slf4jApi = "2.0.13"
+slf4jApi = "2.0.15"
 mannodermaus_junit5_plugin = "1.10.2.0"
 mannodermaus_junit5 = "1.5.0"
 
@@ -31,9 +31,10 @@ androidx_test_monitor = { module = "androidx.test:monitor", version.ref = "andro
 androidx_test_uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "androidx_test_ui_automator" }
 de-manodermaus-android-junit5 = { module = "de.mannodermaus.junit5:android-test-core", version.ref = "mannodermaus_junit5" }
 de-manodermaus-android-junit5-runner = { module = "de.mannodermaus.junit5:android-test-runner", version.ref = "mannodermaus_junit5" }
-junit = { module = "junit:junit", version.ref = "junit" }
+junit-jupiter = { module = "org.junit.jupiter:unit-jupiter", version.ref = "jupiter" }
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "jupiter" }
 logback-android = { module = "com.github.tony19:logback-android", version.ref = "logback-android" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4jApi" }
@@ -41,6 +42,7 @@ packetdumper = { module = "com.jasonernst.packetdumper:packetdumper", version = 
 
 [bundles]
 android-test = ["junit-jupiter-api", "androidx_test_runner", "androidx_test_monitor", "androidx_test_uiautomator", "de-manodermaus-android-junit5"]
+unit-test = ["junit-jupiter-api", "de-manodermaus-android-junit5"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -50,3 +52,4 @@ git-version = { id = "me.qoomon.git-versioning", version = "6.4.3" }
 sonatype-maven-central = { id = "com.vanniktech.maven.publish", version = "0.29.0" }
 gradleup-nmcp = { id = "com.gradleup.nmcp", version = "0.0.9"}
 de-mannodermaus-android-junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "mannodermaus_junit5_plugin" }
+cmake = { id = "dev.welbyseely.gradle-cmake-plugin", version = "0.1.0"}
