--- a/icmp-linux/src/main/CMakeLists.txt
+++ b/icmp-linux/src/main/CMakeLists.txt
@@ -1,8 +1,8 @@
 # this is only for non-android operation (ie, jvm)
 cmake_minimum_required(VERSION 3.16.3)
-project("icmp-lib")
+project("icmp")
 find_package(JNI)
 
 include_directories(headers)
 include_directories(${JNI_INCLUDE_DIRS}/linux)
-add_library(icmp-lib SHARED cpp/jni_filedesc.cpp)
+add_library(icmp SHARED cpp/jni_filedesc.cpp)
