--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,8 @@ jobs:
           cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - run: echo "Building Debug APK."
+      - name: Build and Publish the Common Library to the local Maven repository
+        run: ./gradlew :icmp-common:publishToMavenLocal
       - name: Build with Gradle
         run: ./gradlew assemble # we don't use build because that will run the tests, we want that separate
       - run: echo "Build status report=${{ job.status }}."
