--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,6 +57,7 @@ de-mannodermaus-android-junit5 = { id = "de.mannodermaus.android-junit5", versio
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 git-version = { id = "me.qoomon.git-versioning", version = "6.4.4" }
 gradleup-nmcp = { id = "com.gradleup.nmcp", version = "0.0.9"}
+kotlinter = { id = "org.jmailen.kotlinter", version.ref = "kotlinter" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 sonatype-maven-central = { id = "com.vanniktech.maven.publish", version = "0.30.0" }
