--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 #          cache: gradle # https://github.com/actions/setup-java/issues/683
+      - name: Display host of runner
+        run: echo $HOST_NAME
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build and Publish the Common Library to the local Maven repository
